--- a/models/Prelim Analysis-updated.ipynb
+++ b/models/Prelim Analysis-updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -35,6 +35,7 @@
     "\n",
     "from sklearn.cross_decomposition import PLSRegression\n",
     "from sklearn import linear_model\n",
+    "from sklearn.metrics import f1_score, precision_score, recall_score\n",
     "import matplotlib.pyplot as plt\n",
     "cwd = os.getcwd()\n",
     "print(cwd)"
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -64,7 +65,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +92,7 @@
     "\n",
     "X[4] = np.log(np.sqrt(100-X[4]+1)+.01)\n",
     "\n",
-    "X = np.array([(row - row.min()) / (row.max()-row.min()) for row in X])\n",
+    "# X = np.array([(row - row.min()) / (row.max()-row.min()) for row in X])\n",
     "# X[1] = (X[1] - X[1].min()) / (X[1].max()-X[1].min())\n",
     "# print(X[0])\n",
     "X = X.T\n",
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -128,14 +129,16 @@
     {
      "data": {
       "text/plain": [
-       "DescribeResult(nobs=512, minmax=(array([ 0.,  0.,  0.,  0.,  0.,  0.]), array([ 1.,  1.,  1.,  1.,  1.,  1.])), mean=array([ 0.64597486,  0.61990775,  0.47664042,  0.69511388,  0.52086224,\n",
-       "        0.58843316]), variance=array([ 0.01075492,  0.04744186,  0.05783586,  0.0242715 ,  0.03120314,\n",
-       "        0.02947311]), skewness=array([-1.67949751, -0.852585  , -0.54791668, -0.83171907,  0.1084179 ,\n",
+       "DescribeResult(nobs=512, minmax=(array([ 3.1       ,  1.60943791,  0.00995033,  3.6       ,  0.55506304,\n",
+       "        5.4       ]), array([ 10.        ,  14.35974001,   2.25095837,   9.5       ,\n",
+       "         2.21649889,   9.        ])), mean=array([ 7.55722656,  9.51344901,  1.07810535,  7.70117187,  1.42044225,\n",
+       "        7.51835937]), variance=array([ 0.51204161,  7.71263224,  0.29045846,  0.84489099,  0.08613218,\n",
+       "        0.38197147]), skewness=array([-1.67949751, -0.852585  , -0.54791668, -0.83171907,  0.1084179 ,\n",
        "       -0.53055206]), kurtosis=array([ 7.69090486,  0.5991322 , -0.22263343,  1.10075016, -0.0271461 ,\n",
        "        0.25257676]))"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -166,9 +160,24 @@
      "output_type": "stream",
      "text": [
       "Our regression has an accuracy of 85.0%\n",
+      "[0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
       "15\n",
       "85\n",
-      "We predict winners with an accuracy of 0.0%\n"
+      "We predict winners with an accuracy of 0.0%\n",
+      "F-score: 0.0 | Precision: 0.0 | Recall: 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/liam/anaconda3/lib/python3.5/site-packages/sklearn/metrics/classification.py:1115: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "/home/liam/anaconda3/lib/python3.5/site-packages/sklearn/metrics/classification.py:1115: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
      ]
     }
    ],
@@ -184,9 +193,15 @@
     "        corr += 1\n",
     "winners = [y for y in YTest if y == 1]\n",
     "losers = [y for y in YTest if y == 0]\n",
+    "print (YTest)\n",
+    "print(preds)\n",
+    "f1 = f1_score(preds, YTest)\n",
+    "prec = precision_score(preds, YTest)\n",
+    "rec = recall_score(preds, YTest)\n",
     "print(len(winners))\n",
     "print(len(losers))\n",
-    "print(\"We predict winners with an accuracy of %s%%\" % ((corr/len(winners))*100))"
+    "print(\"We predict winners with an accuracy of %s%%\" % ((corr/len(winners))*100))\n",
+    "print('F-score: %s | Precision: %s | Recall: %s' % (f1, prec, rec))"
    ]
   },
   {
