added KW test to anaylsis

--- a/analysis/Analysis.ipynb
+++ b/analysis/Analysis.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import csv"
+    "import csv\n",
+    "from scipy.stats import kruskal,mannwhitneyu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Timestamp', 'Please rank the following (No repeat ranks, must rank each row) [Budget]', 'Please rank the following (No repeat ranks, must rank each row) [Producer]', 'Please rank the following (No repeat ranks, must rank each row) [Average Critic score (Rotten Tomatoes)]', 'Please rank the following (No repeat ranks, must rank each row) [IMDB Rating]', 'Please rank the following (No repeat ranks, must rank each row) [Number of IMDB ratings]', 'Please rank the following (No repeat ranks, must rank each row) [Average User Score (Rotten Tomatoes)]', 'Please rank the following (No repeat ranks, must rank each row) [Profit ratio]', 'Please rank the following (No repeat ranks, must rank each row) [Total Box office sales]', 'How much do you enjoy researching movies, such as browsing IMDB, Wikipedia pages, and looking up actors?', 'How much do you enjoy watching movies?', 'How often do you watch the Oscars or similar movie award shows?', 'What is your current age?', 'Are you currently attending University?']\n"
+      "['Timestamp', 'Please rank the following (No repeat ranks, must rank each row) [Production Budget]', 'Please rank the following (No repeat ranks, must rank each row) [Producer]', 'Please rank the following (No repeat ranks, must rank each row) [Average Critic Score (Rotten Tomatoes)]', 'Please rank the following (No repeat ranks, must rank each row) [IMDB Rating]', 'Please rank the following (No repeat ranks, must rank each row) [IMDB Votes]', 'Please rank the following (No repeat ranks, must rank each row) [Average Audience Score (Rotten Tomatoes)]', 'Please rank the following (No repeat ranks, must rank each row) [Return on Investment]', 'Please rank the following (No repeat ranks, must rank each row) [Worldwide Gross]', 'How much do you enjoy researching movies, such as browsing IMDB, Wikipedia pages, and looking up actors?', 'How much do you enjoy watching movies?', 'How often do you watch the Oscars or similar movie award shows?', 'What is your current age?', 'Are you currently attending University?']\n"
      ]
     }
    ],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -69,21 +70,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 4 8 8 7 6 2 8 1 5 8 5 7 7 2 7 7 8 3 6 6 8 1 7 8 7 7 1 7 8 8 7 8 5 8 7 1\n",
-      " 2 3 1 7 7 8 8 6 7 6 7 6 6 7 3 8 7 6 3 8 7 6 2 2 7 5 8 6 4 7 5 3 8 4 6 6 7\n",
-      " 3 6 5 5]\n",
-      "[8 7 7 5 8 8 8 7 8 8 7 6 8 8 5 8 3 1 6 8 3 7 7 8 5 6 2 3 3 3 7 8 7 8 4 8 7\n",
-      " 8 7 8 2 5 7 7 8 8 4 4 8 8 4 7 3 8 2 8 6 6 3 6 8 8 3 7 8 8 2 8 8 4 8 7 8 3\n",
-      " 7 8 8 8]\n",
-      "['Budget', 'Average Critic score (Rotten Tomatoes)', 'IMDB Rating', 'Number of IMDB ratings', 'Average User Score (Rotten Tomatoes)', 'Profit ratio', 'Total Box office sales']\n",
+      "['Production Budget', 'Average Critic Score ', 'IMDB Rating', 'IMDB Votes', 'Average Audience Score ', 'Return on Investment', 'Worldwide Gross']\n",
       "Soft Max Values\n",
-      "Average Critic score (Rotten Tomatoes): 0.557769349727\n",
-      "Total Box office sales: 0.167137582418\n",
+      "Worldwide Gross: 0.167137582418\n",
+      "Return on Investment: 0.0607032238123\n",
+      "Production Budget: 0.0336580824017\n",
+      "IMDB Votes: 0.0209448803779\n",
       "IMDB Rating: 0.101374068127\n",
-      "Profit ratio: 0.0607032238123\n",
-      "Average User Score (Rotten Tomatoes): 0.0584128131355\n",
-      "Budget: 0.0336580824017\n",
-      "Number of IMDB ratings: 0.0209448803779\n"
+      "Average Critic Score : 0.557769349727\n",
+      "Average Audience Score : 0.0584128131355\n"
      ]
     }
    ],
@@ -91,7 +86,7 @@
     "ratings = pd.DataFrame(reader).values[:,1:-5].astype(int)\n",
     "ratings = ratings.T\n",
     "ratings = np.delete(ratings,1,axis=0) # removing producer\n",
-    "trimmed_fields = [x.split(\"[\")[1].split(\"]\")[0].strip() for x in fields[1:-5]]\n",
+    "trimmed_fields = [x.split(\"[\")[1].split(\"]\")[0].strip().split('(')[0] for x in fields[1:-5]]\n",
     "trimmed_fields.pop(1) # removing producer\n",
     "print(trimmed_fields)\n",
     "means = [x.mean() for x in ratings]\n",
@@ -100,14 +95,14 @@
     "softs = soft_max(means)\n",
     "print(\"Soft Max Values\")\n",
     "zipped = [[f,v]for f,v in zip(trimmed_fields,softs)]\n",
-    "zipped.sort(key=lambda x: x[1], reverse=True)\n",
+    "zipped.sort(key=lambda x: x[0], reverse=True)\n",
     "for f,v in zipped:\n",
     "    print(\"%s: %s\" % (f,v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -116,12 +111,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMDB Votes: 0.2865382361658364\n",
-      "Return on Investment: 0.2805318966523604\n",
       "Worldwide Gross: 0.14675816645915077\n",
-      "Average Critic Score: 0.130111639147387\n",
+      "Return on Investment: 0.2805318966523604\n",
       "Production Budget: 0.05559253199638893\n",
+      "IMDB Votes: 0.2865382361658364\n",
       "IMDB Rating: 0.05182904390551388\n",
+      "Average Critic Score: 0.130111639147387\n",
       "Average Audience Score: 0.04863848567336266\n"
      ]
     }
@@ -131,9 +126,35 @@
     "logregcoefs = np.array(logregcoefs)\n",
     "logregcoefs[:,1] = soft_max(logregcoefs[:,1].astype(float))\n",
     "logregcoefs = logregcoefs.tolist()\n",
-    "logregcoefs.sort(key=lambda x: x[1], reverse=True)\n",
+    "logregcoefs.sort(key=lambda x: x[0], reverse=True)\n",
     "for f,v in logregcoefs:\n",
     "    print(\"%s: %s\" % (f,v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KruskalResult(statistic=0.19999999999999574, pvalue=0.65472084601858027)\n"
+     ]
+    }
+   ],
+   "source": [
+    "zipped1 = [z[1] for z in zipped] # get just the values\n",
+    "logreg1 = [float(l[1]) for l in logregcoefs]\n",
+    "# print(zipped1)\n",
+    "# print(logreg1)\n",
+    "\n",
+    "test = kruskal(np.array(zipped1),np.array(logreg1))\n",
+    "test2 = mannwhitneyu(np.array(zipped1),np.array(logreg1))\n",
+    "print(test)\n"
    ]
   },
   {
