--- a/analysis/Analysis.ipynb
+++ b/analysis/Analysis.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -111,29 +111,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Worldwide Gross: 0.14675816645915077\n",
-      "Return on Investment: 0.2805318966523604\n",
-      "Production Budget: 0.05559253199638893\n",
-      "IMDB Votes: 0.2865382361658364\n",
-      "IMDB Rating: 0.05182904390551388\n",
-      "Average Critic Score: 0.130111639147387\n",
-      "Average Audience Score: 0.04863848567336266\n"
+      "Worldwide Gross: 0.7693374461761608\n",
+      "Return on Investment: 0.06822327746934165\n",
+      "Production Budget: 0.0008398609599352032\n",
+      "IMDB Votes: 0.019102325968666383\n",
+      "IMDB Rating: 0.0698664357636996\n",
+      "Average Critic Score: 0.04596617101656862\n",
+      "Average Audience Score: 0.026664482645627638\n"
      ]
     }
    ],
    "source": [
     "logregcoefs = [['IMDB Rating', -0.34300168957186966], ['IMDB Votes', 1.3669196119522085], ['Average Critic Score', 0.57744046973782626], ['Average Audience Score', -0.40653727105115345], ['Production Budget', -0.27290349924072632], ['Worldwide Gross', 0.69783373108027336], ['Return on Investment', 1.3457350571892375]]\n",
+    "gamcoefs = [['IMDB Votes', -0.726622204], ['IMDB Rating',0.157007000], ['Average Critic Score',0.109126851], ['Average Audience Score',0.003958049], ['Production Budget',-7.045378456], ['Worldwide Gross',5.623981533], ['Return on Investment',0.130592474]]\n",
+    "gamcoefs = np.array(gamcoefs)\n",
     "logregcoefs = np.array(logregcoefs)\n",
-    "logregcoefs[:,1] = soft_max(logregcoefs[:,1].astype(float))\n",
-    "logregcoefs = logregcoefs.tolist()\n",
-    "logregcoefs.sort(key=lambda x: x[0], reverse=True)\n",
-    "for f,v in logregcoefs:\n",
-    "    print(\"%s: %s\" % (f,v))"
+    "\n",
+    "mergedregcoefs = np.array([[x[0], (float(x[1])+float(y[1]))/2] for x,y in zip(gamcoefs,logregcoefs)])\n",
+    "mergedregcoefs[:,1] = soft_max(mergedregcoefs[:,1].astype(float))\n",
+    "\n",
+    "mergedregcoefs = mergedregcoefs.tolist()\n",
+    "mergedregcoefs.sort(key=lambda x: x[0], reverse=True)\n",
+    "for f,v in mergedregcoefs:\n",
+    "    print(\"%s: %s\" % (f,v))\n",
+    "    \n",
+    "\n",
+    "# logregcoefs[:,1] = soft_max(logregcoefs[:,1].astype(float))\n",
+    "# gamcoefs[:,1] = soft_max(gamcoefs[:,1].astype(float))\n",
+    "\n",
+    "# logregcoefs = logregcoefs.tolist()\n",
+    "# logregcoefs.sort(key=lambda x: x[0], reverse=True)\n",
+    "# for f,v in logregcoefs:\n",
+    "#     print(\"%s: %s\" % (f,v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -142,18 +156,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KruskalResult(statistic=0.19999999999999574, pvalue=0.65472084601858027)\n"
+      "Worldwide Gross: 5.623981533\n",
+      "Return on Investment: 0.130592474\n",
+      "Production Budget: -7.045378456\n",
+      "IMDB Votes: -0.726622204\n",
+      "IMDB Rating: 0.157007\n",
+      "Average Critic Score: 0.109126851\n",
+      "Average Audience Score: 0.003958049\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamcoefs = gamcoefs.tolist()\n",
+    "gamcoefs.sort(key=lambda x: x[0], reverse=True)\n",
+    "for f,v in gamcoefs:\n",
+    "    print(\"%s: %s\" % (f,v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KruskalResult(statistic=0.689795918367345, pvalue=0.40623380511079543)\n"
      ]
     }
    ],
    "source": [
     "zipped1 = [z[1] for z in zipped] # get just the values\n",
+    "mergedreg = [float(x[1]) for x in mergedregcoefs]\n",
     "logreg1 = [float(l[1]) for l in logregcoefs]\n",
-    "# print(zipped1)\n",
-    "# print(logreg1)\n",
+    "gam1 = [float(g[1]) for g in gamcoefs]\n",
     "\n",
-    "test = kruskal(np.array(zipped1),np.array(logreg1))\n",
-    "test2 = mannwhitneyu(np.array(zipped1),np.array(logreg1))\n",
+    "test = kruskal(np.array(zipped1),np.array(mergedreg))\n",
+    "# test = kruskal(np.array(zipped1),np.array(logreg1), np.array(gam1))\n",
+    "# test2 = mannwhitneyu(np.array(zipped1),np.array(logreg1))\n",
     "print(test)\n"
    ]
   },
