--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -291,6 +291,8 @@
     "\n",
     "# test = kruskal(np.array(zipped1),np.array(logreg1), np.array(gam1))\n",
     "# test2 = mannwhitneyu(np.array(zipped1),np.array(logreg1))\n",
+    "\n",
+    "# test regressions against all human group permutations\n",
     "print(\"Regressions V. Experts\")\n",
     "test_me = _spearman(mergedreg,expert_ranks)\n",
     "print(test_me)\n",
