added some commentinmmenting and other files to the scraping folder

--- a/scraping/ConstructOscars.ipynb
+++ b/scraping/ConstructOscars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/liam/Documents/info370\n"
+      "/var/www/Repositories/oscars/scraping\n"
      ]
     }
    ],
@@ -32,12 +32,12 @@
     "from sklearn.cross_decomposition import PLSRegression\n",
     "import matplotlib.pyplot as plt\n",
     "cwd = os.getcwd()\n",
-    "print(cwd)\n"
+    "print(cwd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -64,6 +64,8 @@
     }
    ],
    "source": [
+    "# compiles the oscar seasons from the saved html file\n",
+    "\n",
     "eles = soup.find('dl').contents\n",
     "oscars = [[\"year\", \"Academy Award\", \"Winner\", \"Movie Name\", \"Producer\"]]\n",
     "oscarRound = []\n",
@@ -686,6 +688,8 @@
     }
    ],
    "source": [
+    "# gathers data from omdb\n",
+    "\n",
     "genreq = \"http://www.omdbapi.com/?tomatoes=true&t=\"\n",
     "missingimdb = []\n",
     "inputs = []\n",
@@ -865,6 +869,8 @@
     }
    ],
    "source": [
+    "# searches google for imdb pages\n",
+    "\n",
     "user_agent = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'\n",
     "headers={'User-Agent':user_agent,} \n",
     "missing2 = []\n",
@@ -915,24 +921,29 @@
    },
    "outputs": [],
    "source": [
+    "# hardcoding the missing ones\n",
+    "\n",
     "imdbIds[\"Cries and Whispers\"] = \"tt0069467\"\n",
     "imdbIds[\"Casablanca\"] = \"tt0034583\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "87\n",
-      "492\n"
+     "ename": "NameError",
+     "evalue": "name 'sys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3f87e7935025>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'obj/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetrecursionlimit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m50000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscars\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sys' is not defined"
      ]
     }
    ],
@@ -974,7 +985,7 @@
    "execution_count": 54,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -11906,6 +11917,8 @@
     }
    ],
    "source": [
+    "# gets data from imdb\n",
+    "\n",
     "imdbData = {}\n",
     "user_agent = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'\n",
     "headers={'User-Agent':user_agent} \n",
@@ -11984,7 +11997,8 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -12036,6 +12050,8 @@
     }
    ],
    "source": [
+    "# testing proxys to bypass imdb ban\n",
+    "\n",
     "user_agent = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'\n",
     "my_referer = \"http://www.google.com/search?q=site:www.imdb.com+Cries+and+Whispers+1974\"\n",
     "headers={'User-Agent':user_agent,'referer': my_referer} \n",
@@ -12603,6 +12619,7 @@
     }
    ],
    "source": [
+    "# inspecting csv output of oscars\n",
     "f = open(\"AA_bestpictures.csv\", 'r')\n",
     "csvRows = csv.reader(f, delimiter=';', quotechar='\"')\n",
     "for indx, row in enumerate(csvRows):\n",
