--- a/scraping/LoadFromIMDB.ipynb
+++ b/scraping/LoadFromIMDB.ipynb
@@ -122,6 +122,9 @@
     }
    ],
    "source": [
+    "# using imdb links gathered from the constructOscars Notebook\n",
+    "# collects data from imdb\n",
+    "\n",
     "imdbData = {}\n",
     "user_agent = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7'\n",
     "headers={'User-Agent':user_agent} \n",
@@ -214,7 +217,8 @@
     }
    ],
    "source": [
-    "\n",
+    "# ratings.txt is a data dump provided by imdb\n",
+    "# the following sections are attempting to parse it's poor format for our movie's ratings.\n",
     "with open(\"ratings.txt\",\"r\") as fin:\n",
     "    file=[line.replace(\"\\n\",\"\").split(maxsplit=3) for line in fin]\n",
     "print(file[0])\n",
@@ -225,7 +229,8 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -461,6 +466,8 @@
     }
    ],
    "source": [
+    "# for those not found in the data dump look in omdb\n",
+    "\n",
     "genreq = \"http://www.omdbapi.com/?tomatoes=true&t=\"\n",
     "unfound2 = []\n",
     "for m in unfound:\n",
@@ -538,6 +545,7 @@
     }
    ],
    "source": [
+    "# assess those still missing\n",
     "for l in unfound2:\n",
     "    print('imdbData[\"'+l[3]+'\"] = [\"'+l[3]+'\",\"'+l[0]+'\", \"\", \"\"]')\n"
    ]
@@ -550,6 +558,7 @@
    },
    "outputs": [],
    "source": [
+    "# auto fill those still missing\n",
     "imdbData[\"The Patriot\"] = [\"The Patriot\",\"1928\", \"0\", \"0\"]\n",
     "imdbData[\"A Tale of Two Cities\"] = [\"A Tale of Two Cities\",\"1936\", \"7.8\", \"3985\"]\n",
     "imdbData[\"Grand Illusion\"] = [\"Grand Illusion\",\"1938\", \"8.1\", \"27154\"]\n",
